--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,12 +21,12 @@
         android:layout_weight="0.21" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
-        android:textSize="25dp" />
+        android:text="0"
+        android:textSize="60sp" />
 
     <Space
         android:layout_width="match_parent"
