--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.muhammad.counter.MainActivity"
-    tools:showIn="@layout/activity_main"
-    android:orientation="vertical"
-    android:weightSum="1">
+    tools:showIn="@layout/activity_main">
 
     <Space
         android:layout_width="354dp"
@@ -21,10 +21,9 @@
         android:layout_weight="0.21" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:textSize="25dp" />
 
@@ -34,22 +33,22 @@
         android:layout_gravity="center_horizontal" />
 
     <Button
+        android:id="@+id/increment"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="172dp"
         android:layout_height="wrap_content"
-        android:text="+"
-        android:id="@+id/button"
-        android:onClick="buttonOnClick"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.09" />
+        android:layout_weight="0.09"
+        android:onClick="incrementButtonOnClick"
+        android:text="+" />
 
     <Button
+        android:id="@+id/decrement"
         android:layout_width="142dp"
         android:layout_height="wrap_content"
-        android:text="-"
-        android:id="@+id/decrement"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.07"
-        android:onClick="DecrementButtonOnClick" />
+        android:onClick="decrementButtonOnClick"
+        android:text="-" />
 
 </LinearLayout>
